--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                             <textarea class="form-control" id="pesan" rows="3"></textarea>
                         </div>
 
-                        <button type="submit" class="btn btn-dark">Kirim</button>
+                        <button type="submit" class="btn btn-dark">Send</button>
                     </form>
                 </div>
             </div>
