--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body id="home">
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark shadow fixed-top" style="background-color: #e26a6a">
+    <nav class="navbar navbar-expand-lg navbar-dark shadow fixed-top" style="background-color: #000000">
         <div class="container">
             <a class="navbar-brand" href="#">Meyora's Portfolio</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -70,11 +70,14 @@
                 </div>
             </div>
             <div class="row justify-content-between fs-5 text-center">
-                <div class="col-md-4">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus repellat maxime porro repudiandae sed, maiores possimus odit rem perferendis quam.</p>
+                <div class="col-md-6">
+                    <p>Saya Meyora Dorti Sailana dari jurusan Media Internet & Technology (ITHB) dan sekarang sedang menempuh semester 6 di jurusan ini. Saya sangat senang mengenal jurusan ini karena banyak pelajaran bermanfaat yang saya dapatkan untuk menunjang
+                        karier saya kedepannya.
+                    </p>
                 </div>
-                <div class="col-md-4">
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam temporibus quam commodi sint molestias error exercitationem. Saepe recusandae voluptate, fugit officia magnam voluptatem laboriosam neque.</p>
+                <div class="col-md-6">
+                    <p>Dalam melakukan suatu pekerjaan hal yang paling saya junjung tinggi adalah saling berkomunikasi satu sama lain agar pekerjaan yang dilakukan bisa terkoordinasi dengan baik. <br> Selain itu juga saya ingin memberikan dampak yang baik
+                        untuk perusahaan, serta bertanggung jawab atas setiap pekerjaan yang diberikan kepada saya.</p>
                 </div>
             </div>
         </div>
@@ -99,9 +102,9 @@
             <div class="row">
                 <div class="col-md-4 mb-3">
                     <div class="card" style=>
-                        <img src="img/projects/1.jpg" class="card-img-top " alt="My Pic 1" />
+                        <img src="img/projects/pic1.png" class="card-img-top " alt="My Pic 1" />
                         <div class="card-body ">
-                            <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <p class="card-text "><b>Sistem Manajemen Cafe</b><br>Sebuah website yang berfungsi untuk menampilkan dan memasukan data kedalam database. <br>Framework : <b>Yii</b><br>Bahasa yang digunakan : <b>PHP</b> <br>Database : <b>MySQL</b></p>
                         </div>
                     </div>
                 </div>
@@ -151,12 +154,12 @@
                             <textarea class="form-control" id="pesan" rows="3"></textarea>
                         </div>
 
-                        <button type="submit" class="btn btn-dark">Kirim</button>
+                        <button type="submit" class="btn btn-danger">Kirim</button>
                     </form>
                 </div>
             </div>
         </div>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#e26a6a" fill-opacity="1" d="M0,64L40,90.7C80,117,160,171,240,202.7C320,235,400,245,480,234.7C560,224,640,192,720,165.3C800,139,880,117,960,128C1040,139,1120,181,1200,197.3C1280,213,1360,203,1400,197.3L1440,192L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"></path></svg>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#000000" fill-opacity="1" d="M0,64L40,90.7C80,117,160,171,240,202.7C320,235,400,245,480,234.7C560,224,640,192,720,165.3C800,139,880,117,960,128C1040,139,1120,181,1200,197.3C1280,213,1360,203,1400,197.3L1440,192L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"></path></svg>
     </section>
     <!-- Akhir Contact -->
 
