--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-4 mb-3">
+                <div class="col-md-6 mb-3">
                     <div class="card" style=>
                         <img src="img/projects/pic1.png" class="card-img-top " alt="My Pic 1" />
                         <div class="card-body ">
@@ -108,19 +108,12 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 mb-3">
+                <div class="col-md-6 mb-3">
                     <div class="card" style=>
-                        <img src="img/projects/2.jpg" class="card-img-top " alt="My Pic 3" />
+                        <img src="img/projects/pic2.png" class="card-img-top " alt="My Pic 3" />
                         <div class="card-body ">
-                            <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 mb-3">
-                    <div class="card" style=>
-                        <img src="img/projects/3.jpg" class="card-img-top " alt="My Pic 3" />
-                        <div class="card-body ">
-                            <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <p class="card-text "><b>Aplikasi Tugas Akhir</b><br>Sebuah manajemen sistem yang dapat membantu para dosen dalam mengelola data nilai mahasiswa tingkat akhir.<br>Framework: <b>Yii</b> dan <b>Node js</b><br>Bahasa yang digunakan : <b>Javascript</b>                                dan
+                                <b>PHP</b><br>Database : <b>MySQL</b></p>
                         </div>
                     </div>
                 </div>
